<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/articlePicture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="130dp"
        android:background="@android:color/transparent"
        android:elevation="2dp"
        android:scaleType="centerCrop"
        android:src="@drawable/market"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/background_article"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/articlePicture"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:text="@string/articleName"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/customColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/articlePicture" />

    <EditText
        android:id="@+id/addArticleName"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:inputType="text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/articlePicture"
        android:autofillHints="" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:padding="5dp"
        android:scrollbars="vertical"
        android:text="@string/qte"
        android:textAlignment="viewStart"
        android:textColor="@color/customColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/addArticleQte"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:padding="5dp"
        android:textAlignment="viewStart"
        android:textColor="@color/customColor"
        android:textStyle="bold"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/addArticleName"
        app:layout_constraintStart_toStartOf="@+id/addArticleName"
        app:layout_constraintTop_toBottomOf="@+id/addArticleName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/addArticlePrice"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:autofillHints=""
        android:inputType="numberDecimal"
        android:padding="5dp"
        android:textAlignment="viewStart"
        android:textColor="@color/customColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/addArticleQte"
        app:layout_constraintStart_toStartOf="@+id/addArticleQte"
        app:layout_constraintTop_toBottomOf="@+id/addArticleQte" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:padding="5dp"
        android:scrollbars="vertical"
        android:text="@string/price"
        android:textAlignment="viewStart"
        android:textColor="@color/customColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/addNewArticle"
        android:layout_width="155dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_button"
        android:text="@string/add_article"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addArticlePrice" />
</androidx.constraintlayout.widget.ConstraintLayout>